[package]
name = "antsi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "antsi"
crate-type = ["cdylib"]

[dependencies]
nom = "7.1"
pyo3 = "0.20.0"
indexmap = "2.2"
logos = "0.14"

[dev-dependencies]
insta = "1.36.1"
